--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cmake4epics"]
 	path = cmake4epics
-	url = https://github.com/mdavidsaver/cmake4epics.git
+	url = https://github.com/hz-b/cmake4epics.git
